--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -1,5 +1,5 @@
 <div class="col-xs-12">
-  <img style="width: 25%;" src="http://4.bp.blogspot.com/-1PPIpuTPnPY/UCudijf1DPI/AAAAAAAABgY/Ohzq0co9uyk/s1600/generic.jpg">
+  <img style="width: 25%;" src="{{product.imageUrl}}">
 </div>
 <div class="col-xs-12">
   <h3>${{product.price}}</h3>
@@ -11,12 +11,12 @@
 <h3>Related Products</h3>
 <div class="panel-body">
   {{#each relatedProducts as |prod|}}
-  <div style="height: 600px; border: 1px solid black;" class="col-xs-4">
-    <img style="width: 100%;" src="http://4.bp.blogspot.com/-1PPIpuTPnPY/UCudijf1DPI/AAAAAAAABgY/Ohzq0co9uyk/s1600/generic.jpg">
-    <h3>${{prod.price}}</h3>
-    <h3><a href="/products/show/{{prod.id}}">{{prod.name}}</a></h3>
-    <h5>{{prod.description}}</h5>
-    <button class="btn btn-primary">Add to Cart</button>
-  </div>
+    <div style="height: 600px; border: 1px solid black;" class="col-xs-4">
+      <img style="width: 100%;" src="{{prod.imageUrl}}">
+      <h3>${{prod.price}}</h3>
+      <h3><a href="/products/show/{{prod.id}}">{{prod.name}}</a></h3>
+      <h5>{{prod.description}}</h5>
+      <button class="btn btn-primary">Add to Cart</button>
+    </div>
   {{/each}}
 </div>
