--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
   </head>
   <body class="page-bg">
 		<header>
-			{{>_navbar}}
+			{{>_navbar userCart=userCart}}
 		</header>
     <main class="container page-container">
       {{{ body }}}
