--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -16,15 +16,13 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/products" class="btn-lg"><span class="glyphicon glyphicon-search" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Search Products"></span></a></li>
-          <li class="dropdown">
-            <a href="#" class="btn-lg dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
+          <li class="dropdown" id="product-add-popover" data-toggle="popover" data-content="Product was added to your cart!">
+            <a href="#" class="btn-lg dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							<span id="items-in-cart-badge" class="badge">{{userCart.length}}</span>
+							<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+							<span class="caret"></span>
+						</a>
+            {{>_cart userCart=userCart}}
           </li>
           <li><a href="/dashboard" class="btn-lg"><span class="glyphicon glyphicon-dashboard" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Dashboard"></span></a></li>
           <li><a href="#" class="btn-lg"><span class="glyphicon glyphicon-equalizer" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Something?"></span></a></li>
