--- a/views/partials/_product-small.handlebars
+++ b/views/partials/_product-small.handlebars
@@ -11,6 +11,6 @@
 		<p>{{product.shortDesc}}</p>
 		{{/unless}}
 		<h3 class="text-center">{{product.prettyPrice}}</h3>
-		<p class="text-center"><a href="#" class="btn btn-primary" role="button">Add to Cart</a></p>
+		<p class="text-center"><a href="/cart/{{product.id}}" class="btn btn-primary" role="button">Add to Cart</a></p>
 	</div>
 </div>
