--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -27,3 +27,26 @@
 		{{/if}}
   </div>
 </div>
+
+{{#if paymentSuccessful}}
+<div class="modal fade" id="paymentSuccessfulModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="">Payment Successful!</h4>
+      </div>
+      <div class="modal-body">
+				Payment successful!! Your products will be shipped as soon as your order has finished processing.
+				Thank you for shopping at Mimir's Market!  Come see us again soon!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<script type="text/javascript">
+$('#paymentSuccessfulModal').modal('show');
+</script>
+{{/if}}
