--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,8 +15,8 @@
 		<nav class='navbar navbar-inverse'>
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-6">
-						<h1><a href='/'>Mimir's Market</a></h1>
+					<div class="col-xs-6 navbar-header">
+						<h1><a href='/' class="">Mimir's Market</a></h1>
 					</div>
 					<div class="col-md-1 col-sm-2 col-md-offset-3">
 						<a href="/cart"><img src="/images/icons/cart.svg" class="icon"></a>
