--- a/views/singleOrder.handlebars
+++ b/views/singleOrder.handlebars
@@ -3,9 +3,9 @@
 <div class="row">
 	<div class="col-sm-6">
 		<h3>Ordered Items</h3>
-		{{#each order.products as |product|}}
+		{{#each order.orderItems as |product|}}
 			<div>
-				<table>
+				<table class="table table-striped">
 					<thead>
 						<tr>
 							<th>Field</th>
@@ -31,7 +31,7 @@
 						</tr>
 						<tr>
 							<td>Category</td>
-							<td>{{product.Category.name}}</td>
+							<td>{{product.category}}</td>
 						</tr>
 						<tr>
 							<td>Quantity</td>
@@ -45,7 +45,7 @@
 	<div class="col-sm-6">
 		<h3>Customer Info</h3>
 		<div>
-			<table>
+			<table class="table table-striped">
 				<thead>
 					<tr>
 						<th>Field</th>
@@ -82,7 +82,7 @@
 		</div>
 		<h3>Order Info</h3>
 			<div>
-				<table>
+				<table class="table table-striped">
 					<thead>
 						<tr>
 							<th>Field</th>
@@ -95,7 +95,7 @@
 							<td>{{order.createdAt}}</td>
 						</tr>
 						<tr>
-							<td>Stripe Token</td>
+							<td>Balance Transaction</td>
 							<td>{{order.token}}</td>
 						</tr>
 						<tr>
