finished orders index

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -41,10 +41,10 @@
           </ul>
         </li>
         <li>
-          <a href="/" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-list-alt"></span></a>
+          <a href="/admin/orders" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-list-alt"></span></a>
         </li>
         <li>
-          <a href="/" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-dashboard"></span></a>
+          <a href="/admin/analytics" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-dashboard"></span></a>
         </li>
         <li><a href="/">Logout</a></li>
       </ul>
