product and category tables working together

--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -14,6 +14,38 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+
+        <div class="navbar-left">
+          <h2>Mimir's Market</h2>
+        </div>
+        <div class="navbar-right" style="margin-top: 1em;">
+          <a href="#"><img src="assets/icons/calculator.png" style="height: 3em; width: 3em;"></a>
+        </div>
+        <div class="navbar-right" style="margin-top: 1em;">
+          <a href="#"><img src="assets/icons/dashboard.png" style="height: 3em; width: 3em;"></a>
+        </div>
+        <div class="navbar-right" style="margin-left: -1em;">
+        <p>(0)</p>
+        </div>
+        <div class="navbar-right" style="margin-top: 1em; margin-right: 1em;">
+          <div class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-shopping-cart" style="height: 1em; width: 1em; font-size: 34px; margin-bottom:-3em; "></span></a>
+            <ul class="dropdown-menu" style="left: 50%; right: auto; text-align: center; transform: translate(-50%, 0);">
+              <li><a href="/user">(1) Item1</a></li>
+              <li><a href="/user/edit">(1) Item2</a></li>
+              <li><hr></li>
+              <li><a href="/views">Checkout</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="navbar-right" style="margin-top: 1em;">
+          <a href="#"><span class="glyphicon glyphicon-search" style="height: 1em; width: 1em; font-size: 34px; margin-bottom:-3em; "></span></a>
+        </div>
+
+    </div>
+  </nav>
 
   {{{body}}}
 
