Search and changing default drop downs done

--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -21,10 +21,10 @@
           <h2>Mimir's Market</h2>
         </div>
         <div class="navbar-right" style="margin-top: 1em;">
-          <a href="#"><img src="assets/icons/calculator.png" style="height: 3em; width: 3em;"></a>
+          <a href="#"><img src="../assets/icons/calculator.png" style="height: 3em; width: 3em;"></a>
         </div>
         <div class="navbar-right" style="margin-top: 1em;">
-          <a href="#"><img src="assets/icons/dashboard.png" style="height: 3em; width: 3em;"></a>
+          <a href="#"><img src="../assets/icons/dashboard.png" style="height: 3em; width: 3em;"></a>
         </div>
         <div class="navbar-right" style="margin-left: -1em;">
         <p>(0)</p>
