Single product view with category related

--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="navbar-right" style="margin-top: 1em;">
-          <a href="#"><span class="glyphicon glyphicon-search" style="height: 1em; width: 1em; font-size: 34px; margin-bottom:-3em; "></span></a>
+          <a href="/search"><span class="glyphicon glyphicon-search" style="height: 1em; width: 1em; font-size: 34px; margin-bottom:-3em; "></span></a>
         </div>
 
     </div>
