--- a/views/search/start.handlebars
+++ b/views/search/start.handlebars
@@ -50,7 +50,7 @@
     </div>
   </div>
   <!-- Sort by Options -->
-  <div class="row">
+  <div class="row" style="margin-top:1em;">
     <div class="col-sm-6 col-sm-offset-3" style="text-align:center;">
         <div class="form-group">
           <div class="col-sm-6">
