--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -26,7 +26,7 @@
           <a href="#"><img src="../assets/icons/calculator.png" style="height: 3em; width: 3em;"></a>
         </div>
         <div class="navbar-right" style="margin-top: 1em;">
-          <a href="#"><img src="../assets/icons/dashboard.png" style="height: 3em; width: 3em;"></a>
+          <a href="/admin"><img src="../assets/icons/dashboard.png" style="height: 3em; width: 3em;"></a>
         </div>
         <div class="navbar-right" style="margin-left: -1em;">
           {{#if cartQuanity}}
