--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -23,7 +23,7 @@
           <h2>Mimir's Market</h2>
         </div>
         <div class="navbar-right" style="margin-top: 1em;">
-          <a href="#"><img src="../assets/icons/calculator.png" style="height: 3em; width: 3em;"></a>
+          <a href="/admin/analytics"><img src="../assets/icons/calculator.png" style="height: 3em; width: 3em;"></a>
         </div>
         <div class="navbar-right" style="margin-top: 1em;">
           <a href="/admin"><img src="../assets/icons/dashboard.png" style="height: 3em; width: 3em;"></a>
